<resources>
    <string name="app_name">Bin Checker</string>
    <string name="preference_file_key">com.assets.binfinder</string>
    <string name="title_home">Home</string>
    <string name="title_lookup">Lookup</string>
    <string name="title_save">Save</string>
    <string name="title_report">Data Correction</string>
    <string name="title_saved">Saved</string>
    <string name="title_premium">Premium</string>
    <string name="text_greeting">Good Morning</string>
    <string name="text_setting">Settings</string>
    <string name="text_history">History</string>
    <string name="text_recent">Recent Lookups</string>
    <string name="text_account">Account</string>
    <string name="text_about">About</string>
    <string name="text_24hours">Last 24 hours searches</string>
    <string name="text_7days">Last 1 Week searches</string>
    <string name="text_30days">Last 1 Month searches</string>
    <string name="text_from_country">Top Bins from your country</string>
    <string name="text_true">true</string>
    <string name="text_false">false</string>
    <string name="error_occurred">An error occurred</string>
    <string name="text_back_online">Back Online</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <plurals name="items">
        <item quantity="one">Once</item>
        <item quantity="other">%d times</item>
    </plurals>
    <string name="text_about_summary">There is not 8 digit bins currently as of now of google  and as per ISO/IEC 7812 2 the Network (Brands) will issue 8 digits bins from 1 april 2022 . visa has recommend to make a room for 9 digits and for mastercard it is 11 . so the previos bins has been padded up to 11 digits.</string>
    <string name="cancel">Cancel</string>
    <string-array name="menu_items">
        <item>Settings</item>
        <item>About and Links</item>
        <item>Help</item>
    </string-array>
    <string name="postcodeformat">Postal Code Format</string>
    <string name="startofweek">Start of Week</string>
    <string name="bin_found">Bin Found</string>
    <string name="boolentrue">true</string>
    <string name="find">Search</string>
    <string name="validate">Validate</string>
    <string name="bank">Bank</string>
    <string name="url">Url</string>
    <string name="phone">Phone</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="level">Level</string>
    <string name="tld">TLD</string>
    <string name="binObject">Bin</string>
    <string name="clear">Clear</string>
    <string name="reset">Reset</string>
    <string name="check">Check</string>
    <string name="number">Number</string>
    <string name="amex">Amex</string>
    <string name="visa">Visa</string>
    <string name="mc">Mastercard</string>
    <string name="generate">Generate</string>
    <string name="notexist">Bin Not Found</string>
    <string name="exist">Bin Found</string>
    <string name="open">Open</string>
    <string name="dash"> - </string>
    <string name="colon"> : </string>
    <string name="space"> </string>
    <string name="close">Close</string>
    <string name="enter6digit">At least 6 digits required</string>
    <string name="pipe">Pipe</string>
    <string name="csv">Csv</string>
    <string name="empty">Cannot be empty</string>
    <string name="lessthan12">Cannot be more than 12</string>
    <string name="lessthan2020">Cannot be less than 2021</string>
    <string name="lessthan1">Cannot be less then 1</string>
    <string name="lessthan6">Cannot be less then 6</string>
    <string name="currency">Currency</string>
    <string name="symbol">Symbol</string>
    <string name="tru">true</string>
    <string name="fal">false</string>
    <string name="sww">Something went wrong</string>
    <string name="ct">Card type</string>
    <string name="cn">Card number</string>
    <string name="incompletedigits">At least 12 digits required</string>
    <string name="ipdetails">Ip details</string>
    <string name="Iban">Iban</string>
    <string name="alpha2">Alpha-2</string>
    <string name="numeric">Numeric code</string>
    <string name="callingcode">Calling code</string>
    <string name="alpha3">Alpha-3</string>
    <string name="version">Version</string>
    <string name="links">Links</string>
    <string name="language">Language</string>
    <string name="card">Card</string>
    <string name="length">Length</string>
    <string name="brand">Brand</string>
    <string name="type">Type</string>
    <string name="basic">Default</string>
    <string name="binlist">Binlist.net</string>
    <string name="by_brand">By brand</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="valid">Valid</string>
    <string name="bic">Bic</string>
    <string name="std_code">Std code</string>
    <string name="imps">Imps</string>
    <string name="upi">Upi</string>
    <string name="rtgs">Rtgs</string>
    <string name="neft">Neft</string>
    <string name="micr_code">Micr code</string>
    <string name="branch">Branch</string>
    <string name="centre">Centre</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="ip_domain">Ip/Domain</string>
    <string name="country">Country</string>
    <string name="region">Region</string>
    <string name="zip">Zip</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="timezone">Timezone</string>
    <string name="isp">Isp</string>
    <string name="org">Org</string>
    <string name="as">As</string>
    <string name="copy">Copy</string>
    <string name="dashboard">Dashboard</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="report_a_crash">Report a crash</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="by_country">By country</string>
    <string name="year">Year</string>
    <string name="cvv">Cvv</string>
    <string name="prepaid">Prepaid</string>
    <string name="Ifsc">Ifsc</string>
    <string name="copied">Copied</string>
    <string name="mastercard">
<a href="https://www.mastercard.co.in/en-in/business/issuers/products-and-solutions/simplified-bin-account-range-table.html">Mastercard Bins</a>
</string>
    <string name="luhn">
<a href="https://en.wikipedia.org/wiki/Luhn_algorithm">Luhn algorithm</a>
</string>
    <string name="pan">
<a href="https://en.wikipedia.org/wiki/Payment_card_number">Payment card number or BIN</a>
</string>
    <string name="cardvalidator">
<a href="https://github.com/stripe/stripe-android/blob/master/payments-model/src/main/java/com/stripe/android/model/CardBrand.kt">Credit card validator</a>
</string>
    <string name="no_more_results">No more results</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="arrType">
        <item>Charge</item>
        <item>Credit</item>
        <item>Debit</item>
        <item>Unknown</item>
        <item>null</item>
    </string-array>
    <string-array name="arrNetwork">
        <item>Network</item>
        <item>American Express</item>
        <item>ATM CARD</item>
        <item>ATOS PRIVATE LABEL</item>
        <item>AURA</item>
        <item>BP FUEL CARD</item>
        <item>Cabal</item>
        <item>CARNET</item>
        <item>CHJONES FUEL CARD</item>
        <item>Cirrus ®</item>
        <item>COMPROCARD</item>
        <item>Dankort</item>
        <item>Debit MasterCard ®</item>
        <item>DINACARD</item>
        <item>Diners Club International</item>
        <item>Discover</item>
        <item>DUET</item>
        <item>EBT</item>
        <item>EFTPOS</item>
        <item>Elo</item>
        <item>EUROSHELL FUEL CARD</item>
        <item>FUEL CARD</item>
        <item>GE CAPITAL</item>
        <item>GLOBAL BC</item>
        <item>Hipercard</item>
        <item>HRG STORE CARD</item>
        <item>Jcb</item>
        <item>Local Brand</item>
        <item>LOYALTY CARD</item>
        <item>LUKOIL FUEL CARD</item>
        <item>Maestro ®</item>
        <item>MasterCard® Credit</item>
        <item>Mir</item>
        <item>NEWDAY</item>
        <item>NSPK MIR</item>
        <item>OUROCARD</item>
        <item>PHH FUEL CARD</item>
        <item>PRIVATE LABEL</item>
        <item>PRIVATE LABEL CARD</item>
        <item>RBS GIFT CARD</item>
        <item>RED FUEL CARD</item>
        <item>RED LIQUID FUEL CARD</item>
        <item>RuPay</item>
        <item>SBERCARD</item>
        <item>SODEXO</item>
        <item>STAR REWARDS</item>
        <item>Tarjeta Naranja</item>
        <item>TROY</item>
        <item>Uatp</item>
        <item>UK FUEL CARD</item>
        <item>UnionPay</item>
        <item>UNKNOWN</item>
        <item>V Pay</item>
        <item>Verve</item>
        <item>Visa</item>
    </string-array>
    <string name="network">Network</string>
    <string name="product_name">Product Name</string>
    <string name="issuer">Issuer</string>
    <string name="more">More</string>
    <string name="search">Find</string>
    <string name="required">Required</string>
    <string name="format">Format</string>
    <string name="total">Total</string>
    <string name="_100">100</string>
    <string name="_4">4</string>
    <string name="_16">16</string>
    <string name="_pipe">|</string>
    <string name="lookup_header">Lookup</string>
    <string name="show_timezone">Show Timezones</string>
    <string name="timezone_summary">If enabled, the timezone will be displayed in the BIN lookup.</string>
    <string name="seon">Seon.io</string>
    <string name="use_seon_api">Use Seon.io API</string>
    <string name="use_seon_api_summary">If enabled, the request will go to the api endpoint with key.</string>
    <string name="seon_api_key">Seon.io API Key</string>
</resources>